--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "src/api/index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/src/api/index.js"
-      }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
-  
